<resources>
    <string name="app_name">HunahpuV2</string>
    <string name="facebook_app_id">354956453127340</string>
    <string name="fb_login_protocol_scheme">fb354956453127340</string>
    <string name="googleSignIn">Iniciar sesión con Google</string>
    <string name="facebookSignIn">Iniciar sesión con Facebook</string>
    <string name="home">Home</string>
    <string name="favs">Productos favoritos</string>
    <string name="logout">Cerrar sesión</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="favSuccess">Producto añadido a favoritos exitosamente</string>
    <string name="deleteAll">Eliminar todos</string>
    <string name="singleDelteted">¡Producto eliminado exitosamente!</string>
    <string name="allDeleted">¡Productos eliminados exitosamente!</string>
    <string name="retry_button">Reintentar</string>
    <string name="panes">Pan</string>
    <string name="bebdasDep">Bebidas deportivas</string>
    <string name="botanas">Botanas</string>
    <string name="limpieza">Limpieza</string>
    <string name="alertNoFound">Producto no encontrado</string>
    <string name="requestConfirm">Agregaremos tu producto a la brevedad posible</string>
    <string name="notNow">Ahora no</string>
    <string name="notFoundMsg">Parece que no hemos encontrado el producto buscado\n¿Te gustaría que lo agregaramos?</string>
    <string name="photoPrueba">https://maps.googleapis.com/maps/api/place/photo?maxwidth=200&amp;maxheight=100&amp;photo_reference=</string>
    <string name="googleKey">&amp;key=AIzaSyBnWAn7Xih1ziiWBx6Ofc6sxc3w_QQWG40</string>
    <string name="nearMarkets">Supermercados cerca de tu ubicación</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>