<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iu.views.SearchPage"
    android:background="#274060">
    <androidx.cardview.widget.CardView
        android:layout_margin="10dp"
        android:padding="5dp"
        app:cardCornerRadius="12dp"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:backgroundTint="#5899E2">
        <EditText
            android:id="@+id/editTextQuery"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="Buscar productos"
            android:background="#5899E2"
            >
        </EditText>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".3"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="30dp">
            <Button
                android:layout_weight="1"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:id="@+id/buttonPanes"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:backgroundTint="@color/white"
                android:text="@string/panes"
                android:textColor="@color/greyText"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:gravity="bottom|center"
                android:drawableTop="@mipmap/ic_lupa"
                android:paddingBottom="6dp">
            </Button>

            <Button
                android:layout_weight="1"
                android:id="@+id/buttonBebidas"
                android:layout_width="0dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_height="130dp"
                android:backgroundTint="@color/white"
                android:text="@string/bebdasDep"
                android:textColor="@color/greyText"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:gravity="bottom|center"
                android:drawableTop="@mipmap/ic_lupa"
                >
            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:layout_weight="1"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:id="@+id/buttonBotanas"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:backgroundTint="@color/white"
                android:text="@string/botanas"
                android:textColor="@color/greyText"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:gravity="bottom|center"
                android:drawableTop="@mipmap/ic_lupa"
                android:paddingBottom="6dp">
            </Button>

            <Button
                android:layout_weight="1"
                android:id="@+id/buttonLimpieza"
                android:layout_width="0dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_height="130dp"
                android:backgroundTint="@color/white"
                android:text="@string/limpieza"
                android:textColor="@color/greyText"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:gravity="bottom|center"
                android:drawableTop="@mipmap/ic_lupa"
                >
            </Button>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>